# server/src/routes/authRoutes.js
@@ -1,9 +1,12 @@
 import express from "express";
-import { registro, login } from "../controllers/authController.js";
+import { registro, login, atualizarUsuario, obterUsuario } from "../controllers/authController.js";
+import autenticarToken from "../middlewares/authMiddleware.js";
 
 const router = express.Router();
 
 router.post("/registro", registro);
 router.post("/login", login);
+router.get("/usuario", autenticarToken, obterUsuario)
+router.put("/usuario", autenticarToken, atualizarUsuario);
 
 export default router;
